# GatewayServer

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  Messaging-framework-0.1.3-Linux.deb  README.md  conanfile.txt
.github/workflows/: cmake.yml
doc/: front-server.dia
env/pg/: configure.sh
env/server/: Dockerfile
src/: main.cpp
src/app/gateway/: CMakeLists.txt  main.cpp
src/sdk/: CMakeLists.txt
src/sdk/channels/: Channel.cpp  Channel.h  ChannelsManager.cpp  ChannelsManager.h  IChannel.h
src/sdk/channels/users/: IUser.h  User.cpp  User.h  UserManager.cpp  UserManager.h
src/sdk/common/: MakeSharedHelper.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h
src/sdk/common/log/: Logger.cpp  Logger.h
src/sdk/context/: AsyncContext.cpp  AsyncContext.h  WorkersPool.cpp  WorkersPool.h
src/sdk/database/: IDatabase.h  Settings.h  Storage.cpp  Storage.h  WrapperPg.cpp  WrapperPg.h  WrpparPg.cpp
src/sdk/engine/: QueryEngine.cpp  QueryEngine.h
src/sdk/network/: AcceptProcess.h  Network.cpp  Network.h  Session.cpp  Session.h  TaskWorker.cpp  TaskWorker.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h
src/sdk/network/session/: ClientSession.cpp  ClientSession.h  ISession.h  Session.cpp  Session.h
src/tools/: Logger.cpp  Logger.h
src/tools/log/: Logger.cpp
test/: CMakeLists.txt  main.cpp  test.cpp
